- 02: Bugfix #132: Stale Structorizer references in Arranger caused trouble <Kay Gürtzig>
- 02: Enh. #133: Execution Call stack may now be inspected in paused state <Kay Gürtzig>
- 02: Enh. KGU#89: Executor: Extended language localisation support <Kay Gürtzig>
- 03: Enh. #84/#135: For-In loops now consistently supported [R. Schmidt]<Kay Gürtzig>
- 04: Bugfix #96/#135: On BASH export conditions now put into [[ ]] [Rolf Schmidt]
- 04: Bugfix #135/KGU#163: Detection of completely undefined variables <Kay Gürtzig>
- 04: Enh. #135: Improved array support on BASH export [Rolf Schmidt]
- 04: Bugfix #138: Lvalues with nested indices like arr[arr[0]] had failed <Kay Gürtzig>
- 04: Bugfix #139: on BASH export Call instructions now converted <Kay Gürtzig>
- 05: Issue #135: Further improvements on BASH export [Rolf Schmidt] <Kay Gürtzig>
- 05: Enh. #142: New Accelerator keys (e.g. for switch text/comment) [Rolf Schmidt]
- 05: Issue #143: Comment popups now close on editing and code export [Rolf Schmidt]
- 05: Enh. #144: New export option to suppress content conversion <Kay Gürtzig>
- 05: Enh. #144: New "favourite code export" menu item (export preference) [Rolf Schmidt]
- 05: Issue #145: Swapped text/comment now works on CASE and PARALLEL elements <Kay Gürtzig>
- 06: Pascal functions ord and chr supported (Executor + Code generators) <Kay Gürtzig>
- 06: Executor: Keyword case awareness (configurable) consistently ensured <Kay Gürtzig>
- 06: Issue #149: Character set (encoding) for export now selectable [Rolf Schmidt]
- 06: Issue #151: Code export pumped the process up with useless GUI threads <Kay Gürtzig>

Version: 3.24 (2016.03.14)
- 01: Bugfix #50 - added return types to signature for function export in Pascal [lhoreman]
- 02: Bugfix #51 - stand-alone input/output keywords were not converted on export [IrisLuc]
- 03: Bugfix #48 - instant delay propagation to Turtleizer <Kay Gürtzig>