@@ -57,6 +57,7 @@ package lu.fisch.structorizer.gui;
  *      Kay Gürtzig     2016.03.21      Enh. #84: FOR-IN loops considered in editing and parser preferences (KGU#61)
  *      Kay Gürtzig     2016-04-01      Issue #143 (comment popup off on editing etc.), Issue #144 (preferred code generator)
  *      Kay Gürtzig     2016-04-04      Enh. #149: Characterset configuration for export supported
+ *      Kay Gürtzig     2016-04-05      Bugfix #155: Selection must be cleared in newNSD()
  *
  ******************************************************************************************************
  *
@@ -968,6 +969,9 @@ public class Diagram extends JPanel implements MouseMotionListener, MouseListene
 		// START KGU 2015-10-29: This didn't actually make sense
 		//root.hasChanged=true;
 		// END KGU 2015-10-29
+		// START KGU#175 2016-04-05: Bugfix #155 We must not forget to clear a previous selection
+		this.selected = this.selectedDown = this.selectedUp = null;
+		// END KGU#175 2016-04-05
 		redraw();
 		analyse();
 		// START KGU#48 2015-10-17: Arranger support
