@@ -548,7 +548,7 @@ ExportOptionDialoge.bracesCheckBox.text=Öffnende Blockklammern ans Ende der Zei
 ExportOptionDialoge.lineNumbersCheckBox.text=Zeilennummern mitgenerieren (BASIC).
 ExportOptionDialoge.lbPrefGenerator.text=Bevorzugte Code-Export-Sprache:
 ExportOptionDialoge.lbCharset.txt=Zeichensatz (Codierung):
-ExportOptionDialoge.chkCharsetAll.txt=Alle auflisten
+ExportOptionDialoge.chkCharsetAll.txt=Alle auflisten?
 ExportOptionDialoge.jLabel1.text=Wählen Sie die Einstellungen, die Sie aktivieren möchten...
 ExportOptionDialoge.jButton1.text=OK
 ExportOptionDialoge.jButton1.tooltip=Speichern der gewählten Einstellungen.
